[package]
name = "traccer"
version = "0.1.0"
authors = ["Tristan Leo <vileda+git@vileda.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redhook = "2.0"
libc = "0.2.93"
nix = "0.20.0"
httparse = "1.4.0"
rustracing_jaeger = "0.6.1"
rustracing = "0.5.0"

[lib]
name = "traccer"
crate_type = ["dylib"]
